<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/Language"
            android:title="@string/menu_slanguage" />
        <item
            android:id="@+id/termscondition"
            android:title="@string/menu_condition" />
        <item
            android:id="@+id/rating"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/sharing"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_Logout"
            android:title="@string/menu_Logout" />
    </group>

</menu>
