<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bag"
    android:gravity="top|center"
    tools:context=".Kalima_page3"
    android:orientation="vertical">
   <!-- <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageIcon4"
            android:layout_width="58dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:src="@drawable/vectotir" />

        <TextView
            android:id="@+id/textviewtitelkalima9"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:text="Kalima Tamjeed"
            android:layout_marginLeft="40dp"
            android:textColor="@color/yello"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:background="@drawable/bag">

    </View>-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="30dp"
        android:theme="@style/toolbar_theme"
        android:background="@drawable/navigation_toolbar">

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="364dp"
        android:layout_height="464dp"
        android:orientation="vertical"
        app:cardBackgroundColor="#025348"
        app:cardCornerRadius="20sp">

        <TextView
            android:id="@+id/textviewtitelkalima10"
            android:layout_width="402dp"
            android:layout_height="130dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/kalimapart7"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textviewtitelkalima11"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="284dp"
            android:layout_marginTop="90dp"
            android:text="@string/Kalimapart8"
            android:textColor="@color/yello"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textviewtitelkalima12"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="401dp"
            android:layout_marginTop="200dp"
            android:text="@string/kalimapart9"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </androidx.cardview.widget.CardView>


</LinearLayout>