<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:background="@drawable/bag"
    tools:context=".Kalima_page1">

  <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageIcon2"
            android:layout_width="58dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:src="@drawable/vectotir" />

        <TextView
            android:id="@+id/textviewtitelkalima1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="Kalima Tayyaba"
            android:textColor="@color/yello"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:background="@drawable/bag">
    </View>-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/toolbar_theme"
        android:layout_marginTop="30dp"
        android:background="@drawable/navigation_toolbar">

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView

        android:layout_width="370dp"
        android:layout_height="279dp"
        android:orientation="vertical"
        app:cardBackgroundColor="#025348"
        app:cardCornerRadius="20sp">

        <TextView
            android:id="@+id/textviewtitelkalima2"
            android:layout_width="402dp"
            android:layout_height="84dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/kalimapart1"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textviewtitelkalima3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/kalimapart2"
            android:textColor="@color/yello"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textviewtitelkalima4"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginTop="200dp"
            android:text="@string/kalimapart3"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </androidx.cardview.widget.CardView>


</LinearLayout>